--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.tankauswertung">
+    <!-- Kamerazugriff gewaehren, TODO Kamera muss nicht vorhanden sein? -->
+    <uses-feature android:name="android.hardware.camera"
+        android:required="false" />
+    <!-- Lesen und schreiben von Fotos in den External Storage -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -28,7 +34,6 @@
             android:name=".SettingsActivity"
             android:label="Einstellungen">
         </activity>
-
     </application>
 
 </manifest>
