--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.tankauswertung">
 
     <!-- Kamerazugriff -->
-    <uses-feature android:name="android.hardware.camera" android:required="true" />
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
 
     <!-- Lesen und schreiben von Fotos in den External Storage -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
