--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
+
 plugins {
     id 'com.android.application'
+    id 'com.mikepenz.aboutlibraries.plugin'
 }
 
 android {
@@ -33,12 +35,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.navigation:navigation-fragment:2.3.1'
-    implementation 'androidx.navigation:navigation-ui:2.3.1'
+    implementation 'androidx.navigation:navigation-fragment:2.3.2'
+    implementation 'androidx.navigation:navigation-ui:2.3.2'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'androidx.preference:preference:1.1.1'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
@@ -46,4 +48,5 @@ dependencies {
     implementation 'com.github.vipulasri:timelineview:1.1.5'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.airbnb.android:paris:1.7.2'
+    implementation "com.mikepenz:aboutlibraries:8.6.3"
 }
